--- a/trunk/WP8jukeboxAPRv8/WP8jukebox/ChartPage.xaml
+++ b/trunk/WP8jukeboxAPRv8/WP8jukebox/ChartPage.xaml
@@ -29,10 +29,14 @@
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0">
-            <phone:LongListSelector x:Name="MainLongListSelector" Margin="0,-22,0,-22" ItemsSource="{Binding Items4}" SelectionChanged="MainLongListSelector_SelectionChanged">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="107*"/>
+                <ColumnDefinition Width="45*"/>
+            </Grid.ColumnDefinitions>
+            <phone:LongListSelector x:Name="MainLongListSelector" Margin="0,-14,-15,-30" ItemsSource="{Binding Items4}" SelectionChanged="MainLongListSelector_SelectionChanged" Grid.ColumnSpan="2">
                 <phone:LongListSelector.ItemTemplate>
                     <DataTemplate>
-                        <Grid ShowGridLines="False" Margin="0,8,0,0" VerticalAlignment="Bottom">
+                        <Grid ShowGridLines="true" Margin="0,8,0,0" VerticalAlignment="Bottom">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="48" />
                                 <RowDefinition />
