--- a/trunk/WP8jukeboxAPRv8/WP8jukebox/ChartPage.xaml
+++ b/trunk/WP8jukeboxAPRv8/WP8jukebox/ChartPage.xaml
@@ -11,46 +11,42 @@
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d"
-    shell:SystemTray.IsVisible="True">
+    shell:SystemTray.IsVisible="True" Margin="0">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid x:Name="LayoutRoot" Background="Transparent">
+    <Grid x:Name="LayoutRoot" Background="Transparent" d:IsLocked="True">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
         <!--TitlePanel contains the name of the application and page title-->
-        <StackPanel Grid.Row="0" Margin="12,17,0,28">
+        <StackPanel Grid.Row="0" Margin="12,17,0,0" Height="164" VerticalAlignment="Top">
             <TextBlock Text="UJUKEBOX" Style="{StaticResource PhoneTextNormalStyle}" Foreground="#FFEE1515"/>
             <TextBlock Text="{Binding}" x:Name="textBox1" Style="{StaticResource PhoneTextNormalStyle}" Foreground="#FFF5F9A7" FontSize="36"/>
             <TextBlock Text="Charts" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
-        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="107*"/>
-                <ColumnDefinition Width="45*"/>
-            </Grid.ColumnDefinitions>
-            <phone:LongListSelector x:Name="MainLongListSelector" Margin="0,-14,-15,-30" ItemsSource="{Binding Items4}" SelectionChanged="MainLongListSelector_SelectionChanged" Grid.ColumnSpan="2">
+        <Grid x:Name="ContentPanel" Grid.Row="1">
+            <phone:LongListSelector x:Name="MainLongListSelector" Margin="0,0,0,0" ItemsSource="{Binding Items4}" SelectionChanged="MainLongListSelector_SelectionChanged" Background="Black"  >
                 <phone:LongListSelector.ItemTemplate>
                     <DataTemplate>
-                        <Grid ShowGridLines="true" Margin="0,8,0,0" VerticalAlignment="Bottom">
+                        <Grid ShowGridLines="FALSE" Margin="0,0,0,0" VerticalAlignment="Bottom">
                             <Grid.RowDefinitions>
-                                <RowDefinition Height="48" />
+                                <RowDefinition Height="40" />
                                 <RowDefinition />
                                 <RowDefinition Height="5" />
                             </Grid.RowDefinitions>
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="70" />
-                                <ColumnDefinition Width="300" />
-                                <ColumnDefinition Width="80" />
+                                <ColumnDefinition Width="40" />
+                                <ColumnDefinition Width="360" />
+                                <ColumnDefinition Width="65" />
                             </Grid.ColumnDefinitions>
-                            <TextBlock Text="{Binding LineFive}" TextWrapping="NoWrap" TextTrimming ="WordEllipsis" Style="{StaticResource PhoneTextSubtleStyle}" FontSize="30" Grid.Column="0" Grid.Row="0" Margin="12,0" VerticalAlignment="Center" />
-                            <TextBlock Text="{Binding LineOne}" TextWrapping="NoWrap" TextTrimming ="WordEllipsis" Style="{StaticResource PhoneTextExtraLargeStyle}" Foreground="#FF0AF5F5" FontSize="36" Grid.Column="1" Grid.Row="0" />
-                            <TextBlock Text="{Binding LineTwo}" TextWrapping="NoWrap" TextTrimming ="WordEllipsis"  Style="{StaticResource PhoneTextSubtleStyle}" Foreground="#996FFF59" FontSize="24" Grid.Column="1" Grid.Row="1" />
-                            <TextBlock Text="{Binding LineFour}" TextWrapping="NoWrap" TextTrimming ="WordEllipsis"  Style="{StaticResource PhoneTextSubtleStyle}" FontSize="30" Grid.Column="2" Grid.Row="0" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="12,8,12,0" />
+                            <TextBlock Text="{Binding LineFive}" TextWrapping="NoWrap"  FontSize="30" Grid.Column="0" Grid.Row="0" Margin="5,0,0,0" VerticalAlignment="Bottom" HorizontalAlignment="Left" />
+                            <TextBlock Text="{Binding LineOne}" TextWrapping="NoWrap" TextTrimming ="WordEllipsis"  Foreground="#FF0AF5F5" FontSize="30" Margin="5,0,0,0" Grid.Column="1" Grid.Row="0" VerticalAlignment="Bottom" HorizontalAlignment="Left" />
+                            <TextBlock Text="{Binding LineTwo}" TextWrapping="NoWrap" TextTrimming ="WordEllipsis"   Foreground="#996FFF59" FontSize="24" Margin="5,0,0,0" Grid.Column="1" Grid.Row="1"  VerticalAlignment="Bottom" HorizontalAlignment="Left" />
+                            <TextBlock Text="{Binding LineFour}" TextWrapping="NoWrap" FontSize="26" Grid.Column="2" Grid.Row="0" Margin="5,0,0,0" VerticalAlignment="Bottom" HorizontalAlignment="Right" Foreground="#FFF5F9A7"   />
                         </Grid>
                     </DataTemplate>
                 </phone:LongListSelector.ItemTemplate>
