--- a/WP8jukeboxAPRv8/WP8jukebox/MainPage.xaml
+++ b/WP8jukeboxAPRv8/WP8jukebox/MainPage.xaml
@@ -13,6 +13,7 @@
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait"  Orientation="Portrait"
     shell:SystemTray.IsVisible="True">
+    
 
     <!--Data context is set to sample data above and LayoutRoot contains the root grid where all other page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
@@ -20,6 +21,10 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
+
+        <shell:SystemTray.ProgressIndicator>
+            <shell:ProgressIndicator IsIndeterminate="true" IsVisible="True" Text="Click me..." x:Name="loadingProgressBar"/>
+        </shell:SystemTray.ProgressIndicator>
 
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel Grid.Row="0" Margin="12,17,0,28">
