--- a/trunk/WP8jukeboxAPRv8/WP8jukebox/ChartPage.xaml
+++ b/trunk/WP8jukeboxAPRv8/WP8jukebox/ChartPage.xaml
@@ -24,7 +24,7 @@
         <StackPanel Grid.Row="0" Margin="12,17,0,0" Height="164" VerticalAlignment="Top">
             <TextBlock Text="UJUKEBOX" Style="{StaticResource PhoneTextNormalStyle}" Foreground="#FFEE1515"/>
             <TextBlock Text="{Binding}" x:Name="textBox1" Style="{StaticResource PhoneTextNormalStyle}" Foreground="#FFF5F9A7" FontSize="36"/>
-            <TextBlock Text="Charts" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <TextBlock Text="charts" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
