--- a/trunk/WP8jukeboxAPRv8/WP8jukebox/DetailsPage.xaml
+++ b/trunk/WP8jukeboxAPRv8/WP8jukebox/DetailsPage.xaml
@@ -25,7 +25,7 @@
         <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
             <TextBlock Text="UJUKEBOX" Style="{StaticResource PhoneTextNormalStyle}" Foreground="#FFEE1515"/>
             <TextBlock Text="{Binding}" x:Name="textBox1" Style="{StaticResource PhoneTextNormalStyle}" Foreground="#FFF5F9A7" FontSize="36"/>
-            <TextBlock Text="Track Details" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <TextBlock Text="track details" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
         <!--ContentPanel contains details text. Place additional content here-->
