--- a/trunk/WP8jukeboxAPRv8/WP8jukebox/MainPage.xaml
+++ b/trunk/WP8jukeboxAPRv8/WP8jukebox/MainPage.xaml
@@ -14,7 +14,6 @@
     SupportedOrientations="Portrait"  Orientation="Portrait"
     shell:SystemTray.IsVisible="True">
     
-
     <!--Data context is set to sample data above and LayoutRoot contains the root grid where all other page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <Grid.RowDefinitions>
@@ -30,7 +29,7 @@
         <StackPanel Grid.Row="0" Margin="12,17,0,28">
             <TextBlock Text="UJUKEBOX" Style="{StaticResource PhoneTextNormalStyle}" Foreground="#FFEE1515"/>
             <TextBlock Text="Make your Vote Count" Style="{StaticResource PhoneTextNormalStyle}" Foreground="#FFF5F9A7" FontSize="36"/>
-            <TextBlock Text="Pick a Venue" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <TextBlock Text="pick a venue" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
         <!--ContentPanel contains LongListSelector and LongListSelector ItemTemplate. Place additional content here-->
