--- a/trunk/WP8jukeboxAPRv8/WP8jukebox/MainPage.xaml
+++ b/trunk/WP8jukeboxAPRv8/WP8jukebox/MainPage.xaml
@@ -1,4 +1,4 @@
-﻿<phone:PhoneApplicationPage
+﻿<phone:PhoneApplicationPage x:Name="about"
     x:Class="WP8jukebox.MainPage"
      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -46,4 +46,15 @@
             </phone:LongListSelector>
         </Grid>
       </Grid>
+    
+    
+    <phone:PhoneApplicationPage.ApplicationBar>
+        
+        <shell:ApplicationBar IsMenuEnabled="True" IsVisible="True">
+            <shell:ApplicationBar.MenuItems>
+               <shell:ApplicationBarMenuItem Text="About UJukebox" Click="About_Click"/>
+            </shell:ApplicationBar.MenuItems>   
+        </shell:ApplicationBar>
+    
+    </phone:PhoneApplicationPage.ApplicationBar>
 </phone:PhoneApplicationPage>
